--- a/css/index.art-works.partial.css
+++ b/css/index.art-works.partial.css
@@ -1,11 +1,3 @@
-:root {
-    --color-bg: #2b1c0e;
-    --color-accent: #eab156;
-    --color-text: #ffffff;
-    --color-text-muted: #ffffff52;
-}
-
-
 .artworks {
     margin-top: 250px;
     position: relative;
