--- a/css/project-video.partial.css
+++ b/css/project-video.partial.css
@@ -1,9 +1,3 @@
-body {
-  font-family: 'Inter', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 .project-video {
   width: 100vw;
   height: 100vh;
